[gd_scene load_steps=17 format=3 uid="uid://b70kgle12qbtf"]

[ext_resource type="Texture2D" uid="uid://catgncy65dwol" path="res://art/tree_background.jpg" id="1"]
[ext_resource type="Script" uid="uid://c7r0acxyw82o4" path="res://ui/wave_ui/user_interface.gd" id="2"]
[ext_resource type="PackedScene" uid="uid://c8h5s5lyy55lt" path="res://ui/how_to_play_guide/how_to_play_guide.tscn" id="2_i4jma"]
[ext_resource type="Texture2D" uid="uid://vkh811kit38i" path="res://art/wood_background.jpg" id="3"]
[ext_resource type="Script" uid="uid://cywdjwc3avenj" path="res://ui/wave_ui/problem_container.gd" id="4"]
[ext_resource type="Script" uid="uid://bslky8v4pe2wj" path="res://ui/wave_ui/health_bar.gd" id="4_kb75b"]
[ext_resource type="Texture2D" uid="uid://cf3nh4knighna" path="res://art/fireball_card.png" id="5"]
[ext_resource type="Texture2D" uid="uid://jo2yfx6omvad" path="res://art/freeze_card.png" id="6_f4522"]
[ext_resource type="PackedScene" uid="uid://cgkj3ydnksxti" path="res://ui/pause_menu/pause_menu.tscn" id="7"]
[ext_resource type="Texture2D" uid="uid://bjpat7klvkpwy" path="res://art/charge_card.png" id="7_q287o"]
[ext_resource type="PackedScene" uid="uid://b33tyie7nt1ll" path="res://ui/upgrade_menu/upgrade_menu.tscn" id="8"]
[ext_resource type="AudioStream" uid="uid://c14rfh7sw7acd" path="res://audio/berry_berry_spendy_time.mp3" id="11_ngx6g"]
[ext_resource type="AudioStream" uid="uid://dlnb8chqfgk4v" path="res://audio/fighty_fighty_kiwi.mp3" id="12_dxkbc"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b5kf5"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hvuor"]
bg_color = Color(1, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i2arf"]
bg_color = Color(0, 0.38039216, 0.7764706, 1)

[node name="UserInterface" type="CanvasLayer"]
script = ExtResource("2")

[node name="TopHUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 64.0
grow_horizontal = 2

[node name="BackgroundTexture" type="TextureRect" parent="TopHUD"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="WaveLabel" type="Label" parent="TopHUD"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 168.0
offset_bottom = 56.0
theme_override_font_sizes/font_size = 32
text = "Wave 0"
metadata/_edit_use_anchors_ = true

[node name="PauseButton" type="Button" parent="TopHUD"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -64.0
offset_bottom = 64.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 32
text = "II"
metadata/_edit_use_anchors_ = true

[node name="BottomHUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -144.0
grow_horizontal = 2
grow_vertical = 0

[node name="BorderTexture" type="TextureRect" parent="BottomHUD"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -64.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1")
expand_mode = 1

[node name="BackgroundTexture" type="TextureRect" parent="BottomHUD"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 16.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3")
expand_mode = 1

[node name="ResourceBarContainer" type="VBoxContainer" parent="BottomHUD"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = -120.0
offset_right = 272.0
offset_bottom = -16.0
grow_vertical = 0

[node name="HealthLabel" type="Label" parent="BottomHUD/ResourceBarContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Egg Health:"

[node name="HealthBar" type="ProgressBar" parent="BottomHUD/ResourceBarContainer"]
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_b5kf5")
theme_override_styles/fill = SubResource("StyleBoxFlat_hvuor")
value = 50.0
script = ExtResource("4_kb75b")

[node name="ManaLabel" type="Label" parent="BottomHUD/ResourceBarContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Mana:  7"

[node name="ManaBar" type="ProgressBar" parent="BottomHUD/ResourceBarContainer"]
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_b5kf5")
theme_override_styles/fill = SubResource("StyleBoxFlat_i2arf")
max_value = 10.0

[node name="UpgradesButton" type="Button" parent="BottomHUD"]
layout_mode = 0
offset_left = 397.0
offset_top = 31.0
offset_right = 577.0
offset_bottom = 127.0
theme_override_font_sizes/font_size = 32
text = "Upgrades
"

[node name="StartWaveButton" type="Button" parent="BottomHUD"]
layout_mode = 0
offset_left = 665.0
offset_top = 31.0
offset_right = 845.0
offset_bottom = 127.0
theme_override_font_sizes/font_size = 32
text = "Start Wave
"

[node name="ProblemBackground" type="ColorRect" parent="BottomHUD"]
visible = false
layout_mode = 0
offset_left = 301.0
offset_top = 16.0
offset_right = 930.0
offset_bottom = 144.0
color = Color(0, 0, 0, 1)

[node name="ProblemContainer" type="VBoxContainer" parent="BottomHUD"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = -0.33515626
anchor_top = -0.041666668
anchor_bottom = -0.041666668
offset_left = 730.0
offset_top = 16.0
offset_right = 930.0
offset_bottom = 150.0
alignment = 1
script = ExtResource("4")
metadata/_edit_use_anchors_ = true

[node name="ProblemLabel" type="Label" parent="BottomHUD/ProblemContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1

[node name="AnswerTextField" type="LineEdit" parent="BottomHUD/ProblemContainer"]
layout_mode = 2

[node name="EnterButton" type="Button" parent="BottomHUD/ProblemContainer"]
layout_mode = 2
text = "Enter"

[node name="FeedbackLabel" type="Label" parent="BottomHUD/ProblemContainer"]
layout_mode = 2

[node name="SpellContainer" type="HBoxContainer" parent="BottomHUD"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -351.0
offset_top = -114.0
offset_right = 526.5
offset_bottom = 134.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(0.4, 0.4)
theme_override_constants/separation = 75
alignment = 1

[node name="FireSpellButton" type="Button" parent="BottomHUD/SpellContainer"]
texture_filter = 1
layout_mode = 2
disabled = true
icon = ExtResource("5")

[node name="IceSpellButton" type="Button" parent="BottomHUD/SpellContainer"]
texture_filter = 1
layout_mode = 2
disabled = true
icon = ExtResource("6_f4522")

[node name="LightningSpellButton" type="Button" parent="BottomHUD/SpellContainer"]
texture_filter = 1
layout_mode = 2
disabled = true
icon = ExtResource("7_q287o")

[node name="HowToPlayGuide" parent="." instance=ExtResource("2_i4jma")]

[node name="PauseMenu" parent="." instance=ExtResource("7")]
visible = false

[node name="UpgradeMenu" parent="." instance=ExtResource("8")]
visible = false

[node name="PreWaveMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_ngx6g")
autoplay = true

[node name="WaveMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_dxkbc")

[connection signal="pressed" from="TopHUD/PauseButton" to="PauseMenu" method="_on_pause_button_pressed"]
[connection signal="pressed" from="BottomHUD/UpgradesButton" to="UpgradeMenu" method="show"]
[connection signal="pressed" from="BottomHUD/StartWaveButton" to="." method="_on_start_wave_button_pressed"]
[connection signal="pressed" from="BottomHUD/SpellContainer/FireSpellButton" to="." method="_on_spell_button_pressed" binds= ["Fire"]]
[connection signal="pressed" from="BottomHUD/SpellContainer/IceSpellButton" to="." method="_on_spell_button_pressed" binds= ["Ice"]]
[connection signal="pressed" from="BottomHUD/SpellContainer/LightningSpellButton" to="." method="_on_spell_button_pressed" binds= ["Lightning"]]
